// Vitest Snapshot v1

exports[`diffPackageJson > empty package.json > diffs 1`] = `
[
  {
    "from": undefined,
    "key": "main",
    "to": "./dist/index.cjs",
  },
  {
    "from": undefined,
    "key": "module",
    "to": "./dist/index.mjs",
  },
  {
    "additions": [
      "/css",
      "/dist",
      "/themes/apac",
    ],
    "key": "files",
  },
  {
    "key": "exports",
  },
]
`;

exports[`diffPackageJson > empty package.json > expectedPackageJson 1`] = `
{
  "main": "./dist/index.cjs",
  "module": "./dist/index.mjs",
  "files": [
    "/css",
    "/dist",
    "/themes/apac",
  ],
  "exports": {
    ".": {
      "types": "./dist/index.cjs.d.ts",
      "import": "./dist/index.mjs",
      "require": "./dist/index.cjs",
    },
    "./css": {
      "types": "./css/dist/index.cjs.d.ts",
      "import": "./css/dist/index.mjs",
      "require": "./css/dist/index.cjs",
    },
    "./themes/apac": {
      "types": "./themes/apac/dist/index.cjs.d.ts",
      "import": "./themes/apac/dist/index.mjs",
      "require": "./themes/apac/dist/index.cjs",
    },
    "./package.json": "./package.json",
  },
}
`;

exports[`diffPackageJson > incorrect package.json > exports missing > diffs 1`] = `
[
  {
    "key": "exports",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > exports missing > expectedPackageJson 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
    "files": [
      "/css",
      "/dist",
      "/themes/apac",
    ],
+   "exports": {
+     ".": {
+       "types": "./dist/index.cjs.d.ts",
+       "import": "./dist/index.mjs",
+       "require": "./dist/index.cjs",
+     },
+     "./css": {
+       "types": "./css/dist/index.cjs.d.ts",
+       "import": "./css/dist/index.mjs",
+       "require": "./css/dist/index.cjs",
+     },
+     "./themes/apac": {
+       "types": "./themes/apac/dist/index.cjs.d.ts",
+       "import": "./themes/apac/dist/index.mjs",
+       "require": "./themes/apac/dist/index.cjs",
+     },
+     "./package.json": "./package.json",
+   },
  }
`;

exports[`diffPackageJson > incorrect package.json > exports out of order > diffs 1`] = `
[
  {
    "key": "exports",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > exports out of order > expectedPackageJson 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
      "/css",
      "/dist",
      "/themes/apac",
    ],
    "exports": {
+     ".": {
+       "types": "./dist/index.cjs.d.ts",
+       "import": "./dist/index.mjs",
+       "require": "./dist/index.cjs",
+     },
      "./css": {
        "types": "./css/dist/index.cjs.d.ts",
        "import": "./css/dist/index.mjs",
        "require": "./css/dist/index.cjs",
      },
@@ --- --- @@
        "types": "./themes/apac/dist/index.cjs.d.ts",
        "import": "./themes/apac/dist/index.mjs",
        "require": "./themes/apac/dist/index.cjs",
      },
      "./package.json": "./package.json",
-     ".": {
-       "types": "./dist/index.cjs.d.ts",
-       "import": "./dist/index.mjs",
-       "require": "./dist/index.cjs",
-     },
    },
  }
`;

exports[`diffPackageJson > incorrect package.json > files > diffs 1`] = `
[
  {
    "additions": [],
    "key": "files",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > files > expectedPackageJson 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
  {
    "main": "./dist/index.cjs",
    "module": "./dist/index.mjs",
    "files": [
      "/css",
-     "/themes/apac",
      "/dist",
+     "/themes/apac",
    ],
    "exports": {
      ".": {
        "types": "./dist/index.cjs.d.ts",
        "import": "./dist/index.mjs",
`;

exports[`diffPackageJson > incorrect package.json > kitchen sink > diffs 1`] = `
[
  {
    "from": "index.js",
    "key": "main",
    "to": "./dist/index.cjs",
  },
  {
    "from": "dist/index.esm.invalid",
    "key": "module",
    "to": "./dist/index.mjs",
  },
  {
    "additions": [
      "/themes/apac",
    ],
    "key": "files",
  },
  {
    "key": "exports",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > kitchen sink > expectedPackageJson 1`] = `
{
  "main": "./dist/index.cjs",
  "module": "./dist/index.mjs",
  "files": [
    "/css",
    "/dist",
    "/extra",
    "/themes/apac",
  ],
  "exports": {
    ".": {
      "types": "./dist/index.cjs.d.ts",
      "import": "./dist/index.mjs",
      "require": "./dist/index.cjs",
    },
    "./css": {
      "types": "./css/dist/index.cjs.d.ts",
      "import": "./css/dist/index.mjs",
      "require": "./css/dist/index.cjs",
    },
    "./themes/apac": {
      "types": "./themes/apac/dist/index.cjs.d.ts",
      "import": "./themes/apac/dist/index.mjs",
      "require": "./themes/apac/dist/index.cjs",
    },
    "./package.json": "./package.json",
  },
}
`;

exports[`diffPackageJson > incorrect package.json > main > diffs 1`] = `
[
  {
    "from": "index.js",
    "key": "main",
    "to": "./dist/index.cjs",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > main > expectedPackageJson 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
  {
-   "main": "index.js",
+   "main": "./dist/index.cjs",
    "module": "./dist/index.mjs",
    "files": [
      "/css",
      "/dist",
      "/themes/apac",
`;

exports[`diffPackageJson > incorrect package.json > module > diffs 1`] = `
[
  {
    "from": "something/else.js",
    "key": "module",
    "to": "./dist/index.mjs",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > module > expectedPackageJson 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
  {
    "main": "./dist/index.cjs",
-   "module": "something/else.js",
+   "module": "./dist/index.mjs",
    "files": [
      "/css",
      "/dist",
      "/themes/apac",
    ],
`;
